# toboggan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  security.yml  snyk-security.yml  static_analysis.yml
examples/: blocking.py  nonblocking.py
tests/: test_connector.py  test_resolvers.py
tests/functional/: test_httpbin_aiohttp.py  test_httpbin_requests.py
tests/integration/: test_connector.py  test_httpbin_aiohttp.py  test_httpbin_httpx.py  test_httpbin_requests.py  test_pydantic.py
tests/unit/: test_annotations.py  test_client_resolvers.py  test_client_utils.py  test_connector.py  test_resolvers.py
toboggan/: __init__.py  aliases.py  annotations.py  blockrequestor.py  builders.py  client.py  clients.py  connector.py  decos.py  exceptions.py  headers.py  interfaces.py  methods.py  models.py  payload.py  requestor.py
toboggan/adapters/: __init__.py  evaluators.py  resolvers.py
toboggan/builders/: __init__.py  messagebuilder.py  requestbuilder.py  senderbuilder.py  statebuilder.py
toboggan/clients/: __init__.py  aiohttp_.py  requests.py  requests_.py  resolvers.py  responses.py  settings.py  utils.py
toboggan/decos/: __init__.py  contexts.py  evaluators.py  headers.py  methods.py  monomorphic.py  polymorphic.py  query.py  resultsin.py  returns.py  sends.py  verbs.py  wrappers.py  yields.py
toboggan/examples/: blocking.py
toboggan/models/: __init__.py  clientcontext.py  commoncontext.py  methodcontext.py  requestbuilder.py  requestcontext.py  responsecontext.py  resultsincontext.py  sessioncontext.py  yieldscontext.py
toboggan/nonblock/: __init__.py  models.py  nonblockrequestor.py  stagingarea.py
toboggan/senders/: blocking.py
toboggan/src/: builders.py  client.py  connector.py  decos.py  exceptions.py  models.py
toboggan/utils/: __init__.py  aliases.py  annotations.py  exceptions.py  standardcaller.py
