[project]
name = "toboggan"
version = "0.1.0"
description = "A wrapper for popular blocking and nonblocking HTTP request libraries."
authors = [
    { name = "Chris Supinger", email = "chris.supinger@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp[speedups] (>=3.8.3)",
    "requests (>=2.28.2)"
]

[build-system]
requires = ["pip", "setuptools", "wheel", "poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
