[project]
name = "toboggan"
version = "0.1.0"
description = "A wrapper for popular blocking and nonblocking HTTP request libraries."
authors = [
    { name = "Chris Supinger", email = "chris.supinger@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.25.0)"
]

[build-system]
requires = ["pip", "setuptools", "wheel", "poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
aiohttp = [
    "aiohttp[speedups] (>=3.8.0)"
]

all = [
    "aiohttp[speedups] (>=3.8.0)",
    "requests (>=2.25.0)"
]

[tool.poetry]
package-mode = true

[tool.poetry.group.test.dependencies]
pytest = "^6.1.0"
pytest-asyncio = "^0.15.0"
